_sass/pages/_not_found.scss
body.not-found {
  background-color: #112e51;
  color: #fff;
  text-align: center;

  a,
  a:focus,
  a:hover {
    color: #fff;
  }

  .site-wrapper {
    display: table;
    height: 100%;
    min-height: 100%;
    width: 100%;
  }

  .site-wrapper-inner {
    display: table-cell;
    vertical-align: top;
  }

  .cover-container {
    margin: auto;
    max-width: 600px;
  }

  .inner {
    padding: 0 30px;
  }

  .cover {
    padding: 0 20px;
  }

  .masthead-brand {
    margin-top: 10px;
  }

  ul {
    padding: 0;
  }

  li {
    display: inline;
    margin: 20px;
  }

  h1 {
    margin-top: 32px;
    margin-bottom: 24px;
  }

  @media (min-width: 768px) {
    .site-wrapper-inner {
      vertical-align: middle;
    }

    .cover-container {
      width: 100%;
    }
  }

  @media (min-width: 992px) {
    .cover-container {
      width: 720px;      
    }
  }
}

